feat: Implement recipe bookmarking and display system
- Added BookmarkContext for managing global bookmark state
- Created Bookmarks and UserRecipes pages with search and sort
- Integrated backend bookmark APIs and database routes
- Refactored tag color generation for consistent UX
- Improved error handling and loading indicators

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Explore delicious recipes shared by the community." />
+    <title>Recipe Vault</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
